// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerEdit displays a full customer with extras properly 1`] = `
<div
  id="customer-edit"
>
  <h2>
    Customer
  </h2>
  <section
    className="row"
  >
    <div>
      <CustomerDetailEdit
        componentKey={23}
        customer={
          Object {
            "email": "anna@blogs.co.uk",
            "first_name": "anna",
            "id": 23,
            "last_name": "Blogs",
          }
        }
        key="detail23"
      />
      <div
        className="grid-container"
      >
        <CustomerAddressGrid
          addresses={
            Array [
              "1",
              "2",
            ]
          }
          customerId={23}
          deleteCustomerAddress={[MockFunction]}
          saveCustomerAddress={[MockFunction]}
        />
        <CustomerPhoneGrid
          customerId={23}
          phones={
            Array [
              "10",
              "20",
            ]
          }
        />
      </div>
    </div>
    <div>
      <NoteCreate
        key="detail278"
        note={
          Object {
            "customer": 23,
            "customer_visible": true,
            "id": 278,
            "note_text": "a note text",
          }
        }
        saveNote={[Function]}
      />
    </div>
  </section>
</div>
`;

exports[`CustomerEdit displays a new customer (no id) properly 1`] = `
<div
  id="customer-edit"
>
  <h2>
    Customer
  </h2>
  <section
    className="row"
  >
    <div>
      <CustomerDetailEdit
        componentKey="new"
        customer={Object {}}
        key="detailnew"
      />
    </div>
    <div />
  </section>
</div>
`;

exports[`displays a full customer with extras properly 1`] = `
<div
  id="customer-edit"
>
  <h2>
    Customer
  </h2>
  <section
    className="row"
  >
    <div>
      <CustomerDetailEdit
        acceptCustomerChanges={[Function]}
        customer={
          Object {
            "addresses": Array [
              "1",
              "2",
            ],
            "email": "anna@blogs.co.uk",
            "first_name": "anna",
            "id": 23,
            "last_name": "Blogs",
            "phones": Array [
              "10",
              "20",
            ],
          }
        }
        key="detail23"
      />
      <div
        className="grid-container"
      >
        <h3>
          Customer Addresses
        </h3>
        <div
          className="grid"
          key="customerAddressGrid"
          style={
            Object {
              "height": "307.20000000000005px",
              "overflow": "scroll",
              "width": "824px",
            }
          }
        >
          <CustomerAddressEdit
            customerAddress={Object {}}
            customerId={23}
            deleteCustomerAddress={[MockFunction]}
            key="editNewAddressnew"
            saveCustomerAddress={[MockFunction]}
          />
          <CustomerAddressEdit
            customerAddress="1"
            customerId={23}
            deleteCustomerAddress={[MockFunction]}
            key="editAddressundefined"
            saveCustomerAddress={[MockFunction]}
          />
          <CustomerAddressEdit
            customerAddress="2"
            customerId={23}
            deleteCustomerAddress={[MockFunction]}
            key="editAddressundefined"
            saveCustomerAddress={[MockFunction]}
          />
        </div>
        <h3>
          Customer Phone
        </h3>
        <table>
          <tbody>
            <CustomerPhoneEdit
              customerId={23}
              key="editNewPhonenew"
            />
            <CustomerPhoneEdit
              customerId={23}
              customerPhone="10"
              key="editPhoneundefined"
            />
            <CustomerPhoneEdit
              customerId={23}
              customerPhone="20"
              key="editPhoneundefined"
            />
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <NoteCreate
        key="detail278"
        note={
          Object {
            "customer": 23,
            "customer_visible": true,
            "id": 278,
            "note_text": "a note text",
          }
        }
        saveNote={[Function]}
      />
    </div>
  </section>
</div>
`;

exports[`displays a new customer (no id) properly 1`] = `
<div
  id="customer-edit"
>
  <h2>
    Customer
  </h2>
  <section
    className="row"
  >
    <div>
      <CustomerDetailEdit
        acceptCustomerChanges={[Function]}
        customer={
          Object {
            "addresses": Array [
              "1",
              "2",
            ],
            "email": "anna@blogs.co.uk",
            "first_name": "anna",
            "last_name": "Blogs",
            "phones": Array [
              "10",
              "20",
            ],
          }
        }
        key="detailnew"
      />
    </div>
    <div />
  </section>
</div>
`;
